[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rxnbench"
version = "1.0.0"
description = "RxnBench: Benchmark for Chemical Reaction Figure Understanding"
authors = [
    {name = "UniParser Team"}
]
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "tqdm>=4.64.0",
    "Pillow>=9.0.0",
    "datasets>=2.0.0",
    "jsonlines>=3.1.0",
    "PyMuPDF>=1.22.0",
    "requests>=2.28.0",
    "pathlib2>=2.3.0"
]

[tool.setuptools]
packages = ["rxnbench_eval", "rxnbench_doc_eval"]

[project.scripts]
rxnbench-eval = "rxnbench_eval.evaluate:main"
rxnbench-doc-eval = "rxnbench_doc_eval.evaluate:main"